Move the GDAL module from "incubator" to "optional". The use of `optional` is temporary since the GDAL license is not a problem. This is because the module depends on Java 22, while the core library depends on Java 11.